@@ -12,7 +12,7 @@ int main(void) {
 
         RGFW_window_swapBuffers(win);
 
-		RGFW_window_eventWait(win, RGFW_eventWaitNext);
+		RGFW_window_eventWait(win, -1);
         while (RGFW_window_checkEvent(win)) {
             switch (win->event.type) {
                 case RGFW_keyPressed:
