@@ -28,6 +28,7 @@ Current Version: RGFW 1.5.5-dev
 - fix window flag bugs (macOS)
 - RGFW_window_maximize uses `toggleFullScreen` if the window has no border (macOS)
 - skip x11 mouse button events if the mouse button > 5
+- fix RGFW_window_eventWait, make sure RGFW_eventWaitNext is converted if it needs to be, ensure the correct time is used, (winapi, cocoa)
 
 Release:    RGFW 1.5 (Jan 14, 2024)
 -----------------------------------------------
